2006-01-17  Luca Cavalli  <loopback@slackit.org>

	* gnome-default-applications.xml.in: fixed Thunderbird command
	line parameter. Closes bug #326808.

2006-01-17  Luca Cavalli  <loopback@slackit.org>

	* gnome-da-xml.c: (gnome_da_xml_get_string): load translated XML
	application description, if available. Closes bug #327221.

2006-01-16  Rodrigo Moya <rodrigo@novell.com>

	* gnome-da-xml.c (gnome_da_xml_load_list): just read the file
	from the $datadir we installed it.

	* Makefile.am: -DDATADIR.

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fixed the dist

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): fixes some errors with the path

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* gnome-da-capplet.c: (show_dialog): use the correct .glade

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix gladedir use

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix a name

2006-01-16  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am:
	* default-applications-properties.glade:
	* gnome-da-capplet.c, gnome-da-capplet.h:
	* gnome-da-item.c, gnome-da-item.h:
	* gnome-da-xml.c, gnome-da-xml.h:
	* gnome-default-applications-properties-structs.c:
	* gnome-default-applications-properties.c:
	* gnome-default-applications-properties.glade:
	* gnome-default-applications.xml.in:
	new gnome-default-applications capplet, 
	patch by Luca Cavalli <loopback@slackit.org> updated for the 
	gnome-control-center build system

2006-01-03  pholie <golierr@gmail.com>

	Fixes bug #324629

	* gnome-default-applications-properties-structs.c: added Opera to
	list of default browsers.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-default-applications-properties-structs.c: Mark the
	structs static.

2005-10-20  Colin Leroy <colin@colino.net>

	* gnome-default-applications-properties-structs.c: added
	Sylpheed Claws to the list of possible mailers.
