@@ -1,3 +1,13 @@
+2006-01-28  Luca Cavalli <loopback@slackit.org>
+
+	* gnome-da-capplet.c: (web_combo_changed_cb),
+	(mail_combo_changed_cb), (terminal_combo_changed_cb),
+	(web_browser_update_combo_box), (mail_reader_update_combo_box),
+	(terminal_update_combo_box), (web_gconf_changed_cb),
+	(mail_gconf_changed_cb), (term_gconf_changed_cb), (show_dialog):
+	update custom command entries also when predefined application is
+	selected. Closes bug #327749.
+
 2006-01-17  Luca Cavalli  <loopback@slackit.org>
 
 	* gnome-default-applications.xml.in: fixed Thunderbird command
